[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
cookie = { version="0.16", features = ["percent-encode"] }
regex = "1.7.0"